fix - Linux adaptation for incompatible but working SWT SashForm.setWeights
MC3000 
	- add warning message selecting continuous data recording in combination with reduced without pause,..
	- add capability to data capture finish for 15 minutes
	- change energy calculation method
iCharger* 
	- handle state property exception while receiving incomplete data 
	- remove checksum calculation
Weatronic-Telemetry
	- handle not initialized measurement symbols which are sometimes displayed as string null
Polaron EX1400
	- add support

Version 3.2.5 - 06 Mar 2016
SkyRC MC3000 
- fix gatherer timing problem
- set activation wait timer 15 minutes
- add start stop message
- fix pause reduction in combi record set
eStation BC6 
- fix missing Balance while loading data from file
adapt font used by MAC OS X 10.11
update windows NSIS installer
update Copyright including 2016
add Weatronic-Telemetry support
add iMax B6 support
HoTTAdpter* 
- fix setting filter properties
FutabaTelemetry 
- correct error message
- add plausibility check to altitude data to better succeed while KMZ export.
OpenTxTelemetry 
- correct error message
fix - runtime error in GraphicsComposite in focus lost listener
fix - keep record formating while cut edge (add missing copy fields in copy constructor)
fix - CSV export remove blank character after time column
update OSD file version to support huge number of measurements
- enhance scaling for large values
- enhance OSD reader/writer for large number of measurements
- enhance set measurement to add new if above of existing
- enhance IDevice interface to support device which creates measurement dynamically
- enhance scale naming while synchronized names
- enhance record coloring if color not available in template
- enhance store statistics, actually not restored
- enhance restore statistics configuration for devices declaring "statistics" in getUsedPropertyKeys()


Version 3.2.4 - 23 Dec 2015
add support for native USB communication